--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -48,6 +48,7 @@
   padding: 0.5em;
   color: var(--background);
   font-size: var(--font-size-heading);
+  text-align: center;
 }
 
 .banner-list {
