--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -119,6 +119,7 @@
   padding-bottom: 56.25%; /* 16:9 */
   padding-top: 25px;
   height: 0;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .iframe-wrapper iframe {
