--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,10 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>{{ page.title }}</title>
     <meta name="description" content="{{ site.description }}">
-    <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon.ico">
+    <link rel="stylesheet" href="/assets/css/main.css"> 
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
